--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<h1> Cheers Eddie! </h1>
-<p> Learning ow to code on github </p>
+<h1 style="color:blue"> Cheers Eddie! </h1>
+<p> Learning how to code on github </p>
