--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1 style="color:blue"> Cheers Eddie! </h1>
-<p> style="font:comicsans">  Learning how to code on github at hatch by SheCanCode </p>
+<p>  Learning how to code on github </p>
+  <font face="comicsans" color="gold">at hatch by SheCanCode!</font>
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/Desktop_computer_clipart_-_Yellow_theme.svg/1200px-Desktop_computer_clipart_-_Yellow_theme.svg.png" width="300" height="300" />
